fix: center on timeline on mobile

--- a/frontend/src/styles/projects.css
+++ b/frontend/src/styles/projects.css
@@ -418,7 +418,7 @@
   }
 
   .left::after, .right::after {
-    left: 15px;
+    left: 12px;
   }
 
   .right {
